crates/ssa-cache-schema/tests/ui/fail_field_attr.rs
use ssa_cache_schema::CacheSchema;

#[derive(CacheSchema)]
struct Bad {
    #[cache_schema(skip)]
    value: u32,
}

fn main() {}
